# Maxwell

./: .gitignore  Cargo.toml  README.md  Test results.txt  To-do list.txt
Icon/: Maxwell.xcf
nnue_trainer/: config.py  main.py  matrix.py  neural_network.py
resources/: I DIDN'T MAKE THESE, AND DON'T OWN THE RIGHTS.txt
src/: bitboards.rs  board.rs  bot.rs  castling_rights.rs  game.rs  heatmaps.rs  killer_moves.rs  log.rs  magic_numbers.rs  main.rs  maxwell.rs  move_data.rs  move_list.rs  move_scorer.rs  move_sorter.rs  nnue.rs  nnue_weights.rs  opening_book.rs  opening_repertoire.rs  perft.rs  piece.rs  piece_square_tables.rs  pieces.rs  point.rs  precalculated_move_data.rs  precomputed_bitboards.rs  precomputed_data.rs  pv_table.rs  resources.rs  scored_move_list.rs  transposition_table.rs  utils.rs  value_holder.rs  zobrist.rs
src/nnue_trainer/: config.rs  generate_training_data.rs  math_funcs.rs  matrix.rs  mod.rs  network.rs  nnue_trainer.rs  output_weights.rs  selfplay.rs
src/nnue_trainer/opening_book/: opening_book.py
v1 builds/: index.html  maxwell_chess.wasm
